fdo#74929 Chart grid is getting lost

Chart grid is getting lost if the attribute value of <c:axId> is negative in original document

Change-Id: Ia5b898028b80fcb338c9062056bc337fab7b70ae