chart2/qa/extras/chart2export.cxx
@@ -48,6 +48,7 @@ public:
     void testBarChartRotation();
     void testShapeFollowedByChart();
     void testPieChartDataLabels();
+    void testChartGridLine();
 
     CPPUNIT_TEST_SUITE(Chart2ExportTest);
     CPPUNIT_TEST(test);
@@ -68,6 +69,7 @@ public:
     CPPUNIT_TEST(testBarChartRotation);
     CPPUNIT_TEST(testShapeFollowedByChart);
     CPPUNIT_TEST(testPieChartDataLabels);
+    CPPUNIT_TEST(testChartGridLine);
     CPPUNIT_TEST_SUITE_END();
 
 protected:
@@ -608,6 +610,14 @@ void Chart2ExportTest::testPieChartDataLabels()
     xmlDocPtr pXmlDoc = parseExport("word/charts/chart", "Office Open XML Text");
     CPPUNIT_ASSERT(pXmlDoc);
     assertXPath(pXmlDoc, "/c:chartSpace/c:chart/c:plotArea/c:pie3DChart/c:ser[1]/c:dLbls/c:dLbl[1]/c:dLblPos", "val", "bestFit");
+}
+
+void Chart2ExportTest::testChartGridLine()
+{
+    load("/chart2/qa/extras/data/docx/", "chartGridLine.docx");
+    xmlDocPtr pXmlDoc = parseExport("word/charts/chart1", "Office Open XML Text");
+    CPPUNIT_ASSERT(pXmlDoc);
+    assertXPath(pXmlDoc, "/c:chartSpace/c:chart/c:plotArea/c:valAx/c:majorGridlines", "1");
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(Chart2ExportTest);
